--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -11,7 +11,7 @@
 <script>
 (function(require) {
     var $ = require("jquery"),
-        map = require("map");
+        map = require("treemap/map");
 
     $(function(){
         map.initMapPage(otm.settings);
