--- a/opentreemap/treemap/templates/treemap/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/photo_review.html
@@ -15,7 +15,7 @@
 {% block scripts %}
 <script>
 (function(require) {
-   require('photoReview').init();
+   require('treemap/photoReview').init();
 })(require);
 </script>
 {% endblock scripts %}
