--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -169,7 +169,7 @@
 
     <script type="text/javascript">
       (function(require) {
-          require("buttonEnabler").run({ config: otm.settings });
+          require("treemap/buttonEnabler").run({ config: otm.settings });
       })(require);
     </script>
 
