Remove 'udf:' and convert '_' to ' ' when displaying audit fields
Fixes #722

--- a/opentreemap/treemap/templates/treemap/edits.html
+++ b/opentreemap/treemap/templates/treemap/edits.html
@@ -60,7 +60,7 @@ active
             </a>
           </td>
           {% endlocalize %}
-          <td>{{ audit.field }}</td>
+          <td>{{ audit.field_display_name }}</td>
 
           {% if audit.field == 'image' %}
 
