--- a/opentreemap/treemap/templates/treemap/recent_user_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_user_edits.html
@@ -15,7 +15,7 @@
         <tr data-id="{{audit.id}}">
             <td>{{ audit.display_action }}</td>
             <td>{{ audit.model }}</td>
-            <td>{{ audit.field }}</td>
+            <td>{{ audit.field_display_name }}</td>
 
             {% if audit.field == 'plot' %}
             <td>
