--- a/opentreemap/treemap/templates/treemap/instance_not_available.html
+++ b/opentreemap/treemap/templates/treemap/instance_not_available.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="content">
   <div class="well error-panel">
-    <h3>{% trans "The map you requested is not available all users." %}</h3>
+    <h3>{% trans "The map you requested is not available to all users." %}</h3>
   </div>
 </div>
 {% endblock content %}
