--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -54,7 +54,7 @@
      data-feature="add_plot"
      data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
      data-disabled-title="{% trans "Adding trees is not available to all users" %}"
-     data-href="{% url 'map' instance_url_name=request.instance.url_name %}{{ settings.ADD_TREE_URL_HASH }}"
+     data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
      disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
    {% endif %}
 </div>
