--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -11,14 +11,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    {% if settings.TEMPLATE_DEBUG %}
+    {% if settings.DEBUG %}
     <link href="{{ STATIC_URL }}css/vendor.css" rel="stylesheet">
     {% else %}
     <link href="{{ STATIC_URL }}css/vendor.min.css" rel="stylesheet">
     {% endif %}
 
     {% block application_css %}
-    {% if settings.TEMPLATE_DEBUG %}
+    {% if settings.DEBUG %}
     <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
     {% else %}
     <link href="{{ STATIC_URL }}css/main.min.css" rel="stylesheet">
