--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load auth_extras %}
 {% load form_extras %}
+{% load i18n %}
 
 {% block page_title %} | {{ user.username }}{% endblock %}
 
@@ -24,18 +25,31 @@ active
 {% endblock header %}
 
 {% block content %}
-{% load i18n %}
+
+{% url 'user_photo' user.username as photo_url %}
+{% include "treemap/partials/upload_image.html" with panel_id="set-photo-modal" title="Set a Photo" endpoint=photo_url %}
 <div class="image-background"></div>
 <div class="container contained profile">
   <div class="row-fluid">
     <div class="span4">
       <div class="account-info">
-        <img class="user-photo" src="{{STATIC_URL}}img/profile.png">
+        {% if user.thumbnail %}
+          <img class="user-photo" id="user-photo" src="{{ user.thumbnail.url }}">
+        {% else %}
+          <img class="user-photo" id="user-photo" src="{{STATIC_URL}}img/profile.png">
+        {% endif %}
         <h1>{{ user.username }}
           <small>{% trans "User Profile" %}</small>
         </h1>
       </div>
       {% usercontent for user %}
+      <div>
+        <button id="toggle-set-photo-modal"
+           data-toggle="modal"
+           data-target="#set-photo-modal"
+           class="btn btn-mini add-photos">{% trans "Add Photo" %}</button>
+        <div id="upload-photo-error" class="text-error" style="display: none"></div>
+      </div>
       <button id="edit-user" data-class="display" class="btn">Edit</button>
       <button id="save-edit" data-class="edit" class="btn" style="display: none;">Save</button>
       <button id="cancel-edit" data-class="edit" class="btn" style="display: none;">Cancel</button>
@@ -90,6 +104,14 @@ active
             validationFields: '[data-class="error"]',
             errorCallback: require('treemap/alerts').makeErrorCallback(config)
         },
+      {% usercontent for user %}
+        imageUploadPanel: {
+            panelId: '#set-photo-modal',
+            show: '#toggle-set-photo-modal',
+            error: '#upload-photo-error',
+            imageElement: '#user-photo'
+        },
+      {% endusercontent %}
         recentEdits: {
             recentEditsContainer: '#recent-user-edits-container',
             prevLink: '#recent-user-edits-prev',
