Save address fields when plots are moved
Includes the following places:
* Create a new tree on map page
* "Quick edit" on map page
* Edit details page

This introduces a transitive dependency where editing will fail if the
user has permissions on plot.geom but not on plot.address_*.

Fixes #341

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -28,6 +28,11 @@
           {% for label, identifier in fields_for_add_tree %}
               {% create label from identifier in request.instance withtemplate "treemap/field/div.html" %}
           {% endfor %}
+
+          <input type="hidden" name="plot.address_street">
+          <input type="hidden" name="plot.address_city">
+          <input type="hidden" name="plot.address_zip">
+
         </form>
     </div>
     <div class="add-step">
