--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -26,7 +26,7 @@
       {% if photo %}
       <a href="{{ photo.image.url }}"><img id="tree-photo" src="{{ photo.thumbnail.url }}"></a>
       {% else %}
-      <img src="{{ STATIC_URL }}img/tree.png">
+      <img id="tree-photo" src="{{ STATIC_URL }}img/tree.png">
       {% endif %}
       {% endwith %}
       <button id="toggle-add-photo-modal"
