--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -33,26 +33,23 @@ active
   <div class="row-fluid">
     <div class="span4">
       <div class="account-info">
-        {% if user.thumbnail %}
-          <img class="user-photo" id="user-photo" src="{{ user.thumbnail.url }}">
-        {% else %}
-          <img class="user-photo" id="user-photo" src="{{STATIC_URL}}img/profile.png">
-        {% endif %}
+        <div class="user-photo-container">
+          {% if user.thumbnail %}
+            <img class="user-photo" id="user-photo" src="{{ user.thumbnail.url }}">
+          {% else %}
+            <img class="user-photo" id="user-photo" src="{{STATIC_URL}}img/profile.png">
+          {% endif %}
+          <button id="toggle-set-photo-modal"
+            data-toggle="modal"
+            data-target="#set-photo-modal"
+            class="btn btn-mini add-photos">{% trans "Add Photo" %}</button>
+        </div>
         <h1>{{ user.username }}
           <small>{% trans "User Profile" %}</small>
         </h1>
       </div>
       {% usercontent for user %}
-      <div>
-        <button id="toggle-set-photo-modal"
-           data-toggle="modal"
-           data-target="#set-photo-modal"
-           class="btn btn-mini add-photos">{% trans "Add Photo" %}</button>
-        <div id="upload-photo-error" class="text-error" style="display: none"></div>
-      </div>
-      <button id="edit-user" data-class="display" class="btn">Edit</button>
-      <button id="save-edit" data-class="edit" class="btn" style="display: none;">Save</button>
-      <button id="cancel-edit" data-class="edit" class="btn" style="display: none;">Cancel</button>
+      <div id="upload-photo-error" class="text-error" style="display: none"></div>
       {% endusercontent %}
       <form id="user-form">
         {% for label, identifier in public_fields %}
@@ -62,22 +59,18 @@ active
         {% for label, identifier in private_fields %}
           {% field label from identifier withtemplate "treemap/field/div.html" %}
         {% endfor %}
-        <ul class="chunk" data-class="display">
-          <li class="chunk-label">{% trans "Password" %}</li>
-          <li class="chunk-content"><a href="{% url 'django.contrib.auth.views.password_reset' %}">{% trans "Reset" %}</a></li>
-        </ul>
-        <ul class="chunk">
-          <li class="chunk-label">{% trans "Emails" %}</li>
-          <li class="chunk-content">{% trans "Not Subscribed" %}</li>
-        </ul>
+        <label>{% trans "Email Updates" %}</label>
+        <div class="field-view">{% trans "Not Subscribed" %}</div>
         {% endusercontent %}
         {% if reputation %}
-        <ul class="chunk">
-          <li class="chunk-label">{% trans "Reputation" %}</li>
-          <li class="chunk-content">{{ reputation }}</li>
-        </ul>
+          <label>{% trans "Reputation" %}</label>
+          <div class="field-view">{{ reputation }}</div>
         {% endif %}
+        <a class="btn" href="{% url 'django.contrib.auth.views.password_reset' %}">{% trans "Reset Password" %}</a>
       </form>
+      <button id="edit-user" data-class="display" class="btn btn-mini btn-info">Edit</button>
+      <button id="save-edit" data-class="edit" class="btn btn-mini btn-primary" style="display: none;">Save</button>
+      <button id="cancel-edit" data-class="edit" class="btn btn-mini" style="display: none;">Cancel</button>
     </div>
     <div class="span8">
       <h2>{% trans "Recently Added and Edited Trees" %}</h2>
