Extend the carousel on the tree detail page to have scrolling thumbnails
Bootstrap Carousel has support for 'indicators', but they are intended to be
navigation pills overlaid on the image.  We are making use of the navigation
control built into the indicators, but making them slide back and forth under
the image in the style of Flickr's image thumbnails.

--- a/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 {% if photos %}
-<a class="carousel-control left" href="#tree-photo-carousel" data-slide="prev">&lt;</a>
+<a class="carousel-control left disabled" href="" data-slide="prev">&lt;</a>
 <a class="carousel-control right" href="#tree-photo-carousel" data-slide="next">&gt;</a>
 {% endif %}
 {% if error %}
