--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -2,7 +2,7 @@
 {% load l10n %}
 {% load diameter %}
 
-<table id="diameter-calculator" class="table table-hover">
+<table id="diameter-calculator" class="table table-hover table-bordered">
   <thead>
     <tr>
       <th>Diameter</th>
@@ -39,5 +39,5 @@
 </table>
 {% if not hide_multiple_trunks %}
 <p id="diameter-calculator-total-row" style="visibility: hidden;">Total Diameter: <span id="diameter-calculator-total-reference">{{ field.value|default_if_none:""|unlocalize }}</span>{% if field.units %} {{ field.units }}{% endif %}</p>
-<a href="http://player.vimeo.com/video/11119129" target="_blank"><i class="icon-videocam"></i> Measuring multiple trunks?</a>
+<a id="diameter-video" href="http://player.vimeo.com/video/11119129" target="_blank"><i class="icon-videocam"></i> Measuring multiple trunks?</a>
 {% endif %}
