--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -239,8 +239,7 @@
                   y: {{ plot.geom.y }}
               }
           },
-          streetView: '#street-view',
-          noStreetViewText: '{% trans "Could not load street view for this location" %}'
+          streetView: '#street-view'
       });
 })(require, otm.settings);
 {% endlocalize %}
