--- a/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
@@ -25,8 +25,8 @@
   </div>
 </div>
 {% if photos %}
-<a class="carousel-control left disabled" href="" data-slide="prev">&lt;</a>
-<a class="carousel-control right" href="#tree-photo-carousel" data-slide="next">&gt;</a>
+<a class="carousel-control left disabled" href="" data-slide="prev"><i class="icon-left-circled"></i></a>
+<a class="carousel-control right" href="#tree-photo-carousel" data-slide="next"><i class="icon-right-circled"></i></a>
 {% endif %}
 {% if error %}
 <div class="text-error">{{ error }}</div>
