Fix the thumbnails styling

--- a/opentreemap/treemap/css/sass/partials/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/_treedetails.scss
@@ -43,18 +43,19 @@
 }
 
 #tree-photo-thumbnails {
-    height: 55px;
+    height: 50px;
 
     > div {
-        overflow-x: auto;
-        overflow-y: hidden;
-        height: 65px;
+        overflow: hidden;
+        height: 50px;
 
         .carousel-indicators {
             display: inline-block;
             position: static;
-            margin: 0 0 10px 0;
+            margin: 0;
             white-space: nowrap;
+            height: 50px;
+            width: 999px;
 
             li {
 				text-indent: 0;
