--- a/opentreemap/treemap/css/sass/partials/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/_treedetails.scss
@@ -55,7 +55,7 @@
             margin: 0;
             white-space: nowrap;
             height: 50px;
-            width: 999px;
+            width: 9999px;
 
             li {
 				text-indent: 0;
@@ -135,9 +135,10 @@
 			display: block;
 		}
     }
-    > button {
+
+    + button {
         position: absolute;
-        bottom: 60px;
+        margin-top: -104px;
         opacity: 0.25;
         width: auto;
         background: black;
@@ -146,8 +147,13 @@
         transition: opacity 0.3s;
         padding: 2px 8px;
 		border-radius: 0;
+
+		&:hover {
+			opacity: 0.85;
+        	background: black;
+		}
     }
-    &:hover > button {
+    &:hover + button {
         opacity: 0.85;
         background: black;
     }
