Disable the image carousel next/prev when there is 1 image or less
Bootstrap Carousel would not work properly with only one image, and could
not recover after adding more, so I disabled the controls until there are
at least 2 images

--- a/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
@@ -24,7 +24,7 @@
     </ol>
   </div>
 </div>
-{% if photos %}
+{% if photos|length > 1 %}
 <a class="carousel-control left disabled" href="" data-slide="prev"><i class="icon-left-circled"></i></a>
 <a class="carousel-control right" href="#tree-photo-carousel" data-slide="next"><i class="icon-right-circled"></i></a>
 {% endif %}
