--- a/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/tree_carousel.html
@@ -18,7 +18,7 @@
     {% for photo in photos %}
       <li data-target="#tree-photo-carousel" data-slide-to="{{ forloop.counter0 }}"
             class="{{ forloop.first|yesno:"active," }}">
-        <img src="{{ photo.thumbnail.url }}" alt="" style="height: 30px;">
+        <img src="{{ photo.thumbnail.url }}" alt="">
       </li>
     {% endfor %}
     </ol>
